--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <body>
 
 <div class="container-fluid">
-  <h1>Hello World!</h1>
+  <h1>Avinash</h1>
   <p>Resize the browser window to see the effect.</p>
   <p>The columns will automatically stack on top of each other when the screen is less than 768px wide.</p>
   <div class="row">
